--- a/Tpumps-Lead/package.json
+++ b/Tpumps-Lead/package.json
@@ -30,6 +30,7 @@
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
     "firebase": "^12.3.0",
+    "lodash": "^4.17.21",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
@@ -37,8 +38,10 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "react-number-format": "^5.4.4"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
